drivers: i2c: i2c_dw: adding optional feature support and improvements
Handling invalid 0 length i2c transfer and logging error
if i2c transfer is initiated with length 0.
Modified i2c shell to support i2c scan command only if I2C_SMBUS_SUPPORTED
Kconfig flag is enabled.
Updated i2c shell for checking i2c-speed parameter in
i2c speed shell command.

Signed-off-by: samit singh sikarwar <samit.singh.sikarwar@intel.com>

--- a/dts/arm64/intel/intel_socfpga_agilex.dtsi
+++ b/dts/arm64/intel/intel_socfpga_agilex.dtsi
@@ -169,6 +169,7 @@
 		#address-cells = <1>;
 		#size-cells = <0>;
 		status = "disabled";
+		resets = <&reset RSTMGR_I2C0_RSTLINE>;
 	};
 
 	i2c1: i2c@ffC02900 {
@@ -181,6 +182,7 @@
 		#address-cells = <1>;
 		#size-cells = <0>;
 		status = "disabled";
+		resets = <&reset RSTMGR_I2C1_RSTLINE>;
 	};
 
 	i2c2: i2c@ffC02A00 {
@@ -193,6 +195,7 @@
 		#address-cells = <1>;
 		#size-cells = <0>;
 		status = "disabled";
+		resets = <&reset RSTMGR_I2C2_RSTLINE>;
 	};
 
 	i2c3: i2c@ffC02B00 {
@@ -205,6 +208,7 @@
 		#address-cells = <1>;
 		#size-cells = <0>;
 		status = "disabled";
+		resets = <&reset RSTMGR_I2C3_RSTLINE>;
 	};
 
 	i2c4: i2c@ffC02C00 {
@@ -217,5 +221,6 @@
 		#address-cells = <1>;
 		#size-cells = <0>;
 		status = "disabled";
+		resets = <&reset RSTMGR_I2C4_RSTLINE>;
 	};
 };
